# chroma

./: .gitignore  README.md  __init__.py  color_scheme.ipynb  convert.py  dynamics.py  energy.py  imports.py  paper.mplstyle  plotting.py  pyproject.toml  structure.py  translate_nucleus_to_origin.tcl  translate_nucleus_to_origin_trajectory.tcl
chroma/: __init__.py  convert.py  dynamics.py  energy.py  paper.mplstyle  plotting.py  structure.py  tex.mplstyle
