[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chroma"
version = "1.0"
authors = [
  { name="Matheus F. Mello", email="matheus@rice.edu" },
]
description = "A small package for analysis of molecular dynamics simulations of chromosomes with MiChroM."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mellofariam/chroma"
Issues = "https://github.com/mellofariam/chroma/issues"